--- a/BLAZAMEmailMessage/Email/Base/EmailHeaderIcon.razor
+++ b/BLAZAMEmailMessage/Email/Base/EmailHeaderIcon.razor
@@ -1,3 +1,4 @@
+@using BLAZAM.Static;
 <!--[if (mso)|(IE)]>
 <td align="center" width="100" class="v-col-padding v-col-background-color v-col-border" style="width: 75px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;" valign="top">
    <![endif]-->
