--- a/BLAZAMGui/Layouts/AppFooter.razor
+++ b/BLAZAMGui/Layouts/AppFooter.razor
@@ -10,9 +10,9 @@
                 </MudTooltip>
             }
             <MudSpacer/>
-    <MudTooltip Class="mud-theme-info" Style="width:max-content" Text="@Program.Version.Version">
+    <MudTooltip Class="mud-theme-info" Style="width:max-content" Text="@ApplicationInfo.RunningVersion.Version">
 
-                Version: @Program.Version.ShortVersion
+            Version: @ApplicationInfo.RunningVersion.ShortVersion
             </MudTooltip>
 
 
