--- a/BLAZAMGui/Layouts/MinLayout.razor
+++ b/BLAZAMGui/Layouts/MinLayout.razor
@@ -23,7 +23,7 @@
         </MudMainContent>
 
         <MudContainer Fixed>
-            @if (Program.InstallationCompleted)
+        @if (ApplicationInfo.installationCompleted)
             {
                 <DirectoryConnectingIndicator />
 
