--- a/BLAZAMGui/Navs/NavMenu.razor
+++ b/BLAZAMGui/Navs/NavMenu.razor
@@ -1,7 +1,4 @@
-﻿@using BLAZAM.Server.Background;
-@using BLAZAM.Server.Pages;
-@using Microsoft.Extensions.Localization;
-@using BLAZAM.Server.Data.Services.Email;
+﻿@using Microsoft.Extensions.Localization;
 @inherits AppComponentBase
 @{
 
