--- a/BLAZAMGui/NotificationBroadcastListener.razor
+++ b/BLAZAMGui/NotificationBroadcastListener.razor
@@ -1,4 +1,6 @@
-﻿@inherits AppComponentBase
+﻿@using BLAZAM.Database.Models.User;
+@using BLAZAM.Update;
+@inherits AppComponentBase
 @code {
     protected override async Task OnInitializedAsync()
     {
