--- a/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
@@ -1,4 +1,5 @@
-﻿@inherits AutoCompleteComponentBase
+﻿@using BLAZAM.Gui.UI.Inputs;
+@inherits AutoCompleteComponentBase
 <MudAutocomplete Class="@Class"
                  Disabled=@Disabled
                  T="IDirectoryEntryAdapter"
