--- a/BLAZAMGui/UI/Modals/AppUserProfileModalContent.razor
+++ b/BLAZAMGui/UI/Modals/AppUserProfileModalContent.razor
@@ -1,4 +1,7 @@
-﻿@using BLAZAM.Server.Shared.UI.Themes;
+﻿@using BLAZAM.Gui.Helpers;
+@using BLAZAM.Gui.Layouts;
+@using BLAZAM.Server.Shared.UI.Themes;
+@using Microsoft.AspNetCore.Components.Forms;
 @inherits AppModalContent
 
 <MudFileUpload T="IBrowserFile"
