--- a/BLAZAMGui/UI/Settings/ApplicationSettings.razor
+++ b/BLAZAMGui/UI/Settings/ApplicationSettings.razor
@@ -1,4 +1,5 @@
-﻿@inherits SettingsComponents
+﻿@using Microsoft.AspNetCore.Components.Forms;
+@inherits SettingsComponents
 
 
 <MudText Typo="Typo.h4">@SettingsLocalization["Application Settings"]</MudText>
