--- a/BLAZAMGui/UI/Settings/Permissions/AddPrivilegeLevelModal.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/AddPrivilegeLevelModal.razor
@@ -8,9 +8,9 @@
                                     CustomResultsFilter="(result)=>result.ObjectType==ActiveDirectoryObjectType.User|| result.ObjectType==ActiveDirectoryObjectType.Group" />
 
 
-                
-                
-                    <MudSwitch Label="Super User" @bind-Checked="@NewPermissionDelegate.IsSuperAdmin" Disabled=Program.InDemoMode />
+
+
+    <MudSwitch Label="Super User" @bind-Checked="@NewPermissionDelegate.IsSuperAdmin" Disabled=ApplicationInfo.inDemoMode />
                     <MudText>Will have complete and total acceess to the application if enabled</MudText>
           
 
