--- a/BLAZAMGui/UI/Settings/ReleaseNotesModalContent.razor
+++ b/BLAZAMGui/UI/Settings/ReleaseNotesModalContent.razor
@@ -1,4 +1,5 @@
-﻿@inherits AppModalContent
+﻿@using BLAZAM.Update;
+@inherits AppModalContent
 <MudMarkdown OverrideHeaderTypo=ConvertHeaders Value="@Update.Release.ReleaseNotes"/>
 
 @code {
