--- a/BLAZAMGui/UI/Settings/SystemSettings.razor
+++ b/BLAZAMGui/UI/Settings/SystemSettings.razor
@@ -52,7 +52,7 @@
     {
         if (await MessageService.Confirm("Are you sure you want to restart the application? All connected users will be disconnected.", "Restart Application"))
         {
-            if (Program.InDemoMode && !UserStateService.CurrentUsername.Equals("admin", StringComparison.OrdinalIgnoreCase))
+            if (ApplicationInfo.InDemoMode && !UserStateService.CurrentUsername.Equals("admin", StringComparison.OrdinalIgnoreCase))
             {
                 SnackBarService.Warning("Restarting the application is not allowed in the demo");
                 return;
