--- a/BLAZAMGui/UI/Settings/UpdateSettings.razor
+++ b/BLAZAMGui/UI/Settings/UpdateSettings.razor
@@ -1,4 +1,5 @@
-﻿@inherits SettingsComponents
+﻿@using BLAZAM.Update;
+@inherits SettingsComponents
 
 
 <MudText Typo="Typo.h4">@SettingsLocalization["Update Settings"]</MudText>
