--- a/BLAZAMGui/UI/Users/NewTemplateUser.razor
+++ b/BLAZAMGui/UI/Users/NewTemplateUser.razor
@@ -1,4 +1,5 @@
-﻿@inherits DirectoryModelComponent
+﻿@using BLAZAM.Database.Models.Templates;
+@inherits DirectoryModelComponent
 
 <div Padding="Padding.Is3">
     <EditForm Model="User">
