--- a/BLAZAMGui/UI/Users/UploadThumbnailModalContent.razor
+++ b/BLAZAMGui/UI/Users/UploadThumbnailModalContent.razor
@@ -1,4 +1,5 @@
-﻿@inherits AppModalContent
+﻿@using Microsoft.AspNetCore.Components.Forms;
+@inherits AppModalContent
 <div Background="Background.Light" Color="Color.Dark">
     @if (newThumbnail != null)
     {
