--- a/BLAZAMGui/UI/Dev/DevTools.razor
+++ b/BLAZAMGui/UI/Dev/DevTools.razor
@@ -20,7 +20,7 @@
             <Row>Database Status: @Enum.GetName(typeof(ServiceConnectionState),Monitor.DatabaseConnected)</Row>
             <Row>ActiveDirectory Status: @Enum.GetName(typeof(ServiceConnectionState),Monitor.DirectoryConnected)</Row>
             <Row>App Ready Status: @Enum.GetName(typeof(ServiceConnectionState),Monitor.AppReady)</Row>
-            <Row>Error Message: @Oops.ErrorMessage</Row>
+            @*<Row>Error Message: @Oops.ErrorMessage</Row>*@
         </MudCard>
         <MudDataGrid Items="@UserStateService.UserStates">
             <Columns>
