--- a/BLAZAM/Pages/Configure/Templates.razor
+++ b/BLAZAM/Pages/Configure/Templates.razor
@@ -20,7 +20,7 @@
                        @bind-Value="@SelectedCategory" />
 
 
-        <MudSelectList T="@DirectoryTemplate"
+        <MudSelectList T="DirectoryTemplate"
                        Values="@Templates"
                        @bind-Value="@SelectedTemplate" />
         @if (Templates?.Count() > 0)
