--- a/BLAZAM/Pages/Error/DatabaseServerUnreachable.razor
+++ b/BLAZAM/Pages/Error/DatabaseServerUnreachable.razor
@@ -1,7 +1,7 @@
 ﻿
 @inject  IDatabaseContext Context
 @code {
-    bool installed = Program.InstallationCompleted;
+    bool installed = ApplicationInfo.installationCompleted;
     
 }
 <h3>Database Server is Unreachable</h3>
