--- a/BLAZAM/Pages/Groups/ViewGroup.razor
+++ b/BLAZAM/Pages/Groups/ViewGroup.razor
@@ -1,5 +1,4 @@
-﻿@using BLAZAM.Server.Pages.Users
-@inject IStringLocalizer<AppLocalization> Loc
+﻿@inject IStringLocalizer<AppLocalization> Loc
 @inject IStringLocalizer<UserLocalization> ULoc
 @inherits DirectoryModelComponent
 
