--- a/BLAZAMGui/Layouts/MainAppBar.razor
+++ b/BLAZAMGui/Layouts/MainAppBar.razor
@@ -1,7 +1,7 @@
 ﻿@inject IStringLocalizer<AppLocalization> AppLocalization
 @inject IApplicationUserStateService UserStateService
 @inject NavigationManager Nav
-@using BLAZAM.Server.Shared.UI.Themes;
+@using BLAZAM.Gui.UI.Themes;
 
 
 <MudAppBar Color=Color.Default Elevation="1">
