--- a/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
@@ -1,5 +1,4 @@
-﻿@using BLAZAM.Gui.UI.Inputs;
-@inherits AutoCompleteComponentBase
+﻿@inherits AutoCompleteComponentBase
 <MudAutocomplete Class="@Class"
                  Disabled=@Disabled
                  T="IDirectoryEntryAdapter"
