--- a/BLAZAM/Pages/Install/InstallDatabase.razor
+++ b/BLAZAM/Pages/Install/InstallDatabase.razor
@@ -1,4 +1,3 @@
-@using Microsoft.EntityFrameworkCore
 @layout InstallLayout
 @inherits AppComponentBase
 @{
@@ -87,7 +86,7 @@ else
             await InvokeAsync(StateHasChanged);
             try
             {
-                if (await Program.ApplyDatabaseMigrations(true))
+                if (await DbFactory.ApplyDatabaseMigrations(true))
                 {
                     Completed = true;
                     await InvokeAsync(StepCompleted.InvokeAsync);
