--- a/BLAZAMGui/Layouts/AppUserButton.razor
+++ b/BLAZAMGui/Layouts/AppUserButton.razor
@@ -1,5 +1,5 @@
 @using BLAZAM.Database.Models.User;
-@using BLAZAM.Server.Shared.UI.Themes;
+@using BLAZAM.Gui.UI.Themes;
 @inherits AppComponentBase
 @{
     var messages = CurrentUser.State?.Messages.Count;
