--- a/BLAZAMGui/Layouts/MainLayout.razor
+++ b/BLAZAMGui/Layouts/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@using BLAZAM.Server.Shared.UI.Themes;
+﻿@using BLAZAM.Gui.Navs
+@using BLAZAM.Gui.UI.Themes;
 @using System.Security.Claims;
 @inherits LayoutComponentBase
 
