--- a/BLAZAMGui/UI/Modals/AppUserProfileModalContent.razor
+++ b/BLAZAMGui/UI/Modals/AppUserProfileModalContent.razor
@@ -1,6 +1,6 @@
-﻿@using BLAZAM.Gui.Helpers;
+﻿@using BLAZAM.Helpers;
 @using BLAZAM.Gui.Layouts;
-@using BLAZAM.Server.Shared.UI.Themes;
+@using BLAZAM.Gui.UI.Themes;
 @using Microsoft.AspNetCore.Components.Forms;
 @inherits AppModalContent
 
