--- a/BLAZAMGui/UI/PageSpecificChat.razor
+++ b/BLAZAMGui/UI/PageSpecificChat.razor
@@ -236,7 +236,7 @@
             OnMessagePosted?.Invoke(message);
             draftMessage = "";
             //messageTextField.Value = "";
-            messageTextField.Clear();
+            await messageTextField.Clear();
             await InvokeAsync(StateHasChanged);
 
         }
