--- a/BLAZAM/Pages/Recycle Bin/RecycleBin.razor
+++ b/BLAZAM/Pages/Recycle Bin/RecycleBin.razor
@@ -17,7 +17,7 @@
     <ToolBarContent>
         <MudText Typo="Typo.h6">Recycle Bin</MudText>
         <MudSpacer />
-        <MudButton Color="Color.Primary" Variant="@Variant.Outlined" OnClick="@(()=>{RestoreSelected();})">Restore Selected</MudButton>
+        <MudButton Color="Color.Primary" Variant="@Variant.Outlined" OnClick="@(async()=>{await RestoreSelected();})">Restore Selected</MudButton>
 
     </ToolBarContent>
     <Columns>
